--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head >
+<meta name="google-site-verification" content="U6v_RSIT70HDVUD2EZLY0Ux6_0HHRCDlSrYTbc-qawA" />
+<meta charset="UTF-8"/>
+<title>Document</title>
+</head>
+<body>
 google-site-verification: google42d10cddcca81f33.html
+</body>
+</html>
+
